Add the first version of the octonote program - Core changes:
  - Changed the name of the project to octonote and refined the stated
    purpose the tool

  - Implemented the first working version of the octonote tool, which is
    now capable of parsing `checkstyle`, `gcc`, and `json` output from
    linting tools (and producing annotations for GitHub Actions)

  - Added an example octonote configuration for parsing ShellCheck
    output

  - Added a basic schema that is supposed to be used to validate the
    YAML config file that the octonote tool uses (however, schema
    validation is disabled for now, until the configuration file format
    stabilizes)

  - Implemented the `test/lint/shellcheck.sh` script, which uses the
    octonote tool to parse the output from ShellCheck and can be used to
    validate the project functionality

  - Wrote a `Makefile` that builds the project

- Upgraded devcontainer build:

  - We now use a `Makefile` instead of a shell script

  - Update `Brewfile` to install `jq` for debug purposes

  - Improve the overall method used to install dev dependencies

  - Install Git hooks automatically (only a pre-commit hook at the
    moment which runs `make lint`)

  - Add `.devcontainer/common.mk` with some common code that is used by
    both the devcontainer `Makefile` and the main project `Makefile`
    (possibly this method needs refactoring)

- Updated `.vscode/launch.json` to help test the new functionality

- Added a `dependabot.yml` config file

- Improved the GitHub Action workflow to build the devcontainer first,
  and then run the lint checks inside the devcontainer

- Other minor changes:

  - Add cSpell configuration

  - Updated EditorConfig file for `Makefile` formatting

  - Updated `.gitignore`

  - Added a basic ShellCheck configuration (`.shellcheckrc`)

  - Added a basic `.vscode/extensions.json` file

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -6,10 +6,12 @@ on:
       - main
 
 jobs:
-  logs:
-    name: Logs
+  build:
+    name: Run tests
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/bottle-garden/devcontainer:main
     steps:
-    - uses: actions/checkout@v2
-    - run: echo "::add-matcher::tests/matchers/shellcheck-gcc.json"
-    - run: cat tests/output/shellcheck-gcc.txt
+      - uses: actions/checkout@v2
+      - run: make --directory .devcontainer install
+      - run: make lint
