--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 __pycache__
 .venv/
 .vscode/settings.json
+*.log
+*.stamp
+*.tmp
+Brewfile.lock.json
 dist/
+node_modules
+package-lock.json
+pipx.lock.txt
