--- a/.editorconfig
+++ b/.editorconfig
@@ -19,6 +19,10 @@ indent_size = 4
 indent_size = off
 max_line_length = off
 
+[Makefile]
+indent_size = 4
+indent_style = tab
+
 [poetry.lock]
 max_line_length = off
 
