--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Run tests
+    name: Integration tests
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/bottle-garden/gh-vscode/devcontainer:universal
