--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ wrapt = "^1.13.3"
 charset-normalizer = "^2.0.7"
 lxml = "^4.6.4"
 pyjq = "^2.5.2"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
