--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,6 +13,9 @@
     "tetradresearch.vscode-h2o",
     "timonwong.shellcheck",
     "tamasfe.even-better-toml",
+    "sourcery.sourcery",
+    "thebutlah.reorder-python-imports",
+    "tamasfe.even-better-toml",
     "codezombiech.gitignore",
     "yzhang.markdown-all-in-one",
     "foxundermoon.shell-format",
