--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = """\
 A CLI tool for parsing arbitrary input and generating standardized, \
 annotations for linting, tests, etc. (including support for GitHub Actions)\
 """
-authors = ["norosa <23469+norosa@users.noreply.github.com>"]
+authors = ["Naomi Rose <23469+nomiro@users.noreply.github.com>"]
 repository = "https://github.com/nomiro/obelist"
 readme = "README.md"
 keywords = [
@@ -31,6 +31,10 @@ packages = [
   { include = "obelist", "from" = "src" },
 ]
 
+[build-system]
+build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+
 [tool.poetry.dependencies]
 python = "^3.7"
 pastel = "^0.2.1"
@@ -42,18 +46,27 @@ charset-normalizer = "^2.0.7"
 lxml = "^4.6.4"
 pyjq = "^2.5.2"
 PyYAML = "^6.0"
+natsort = "^8.0.0"
+pyroma = "^3.2"
+vulture = "^2.3"
 
 [tool.poetry.dev-dependencies]
-black = "^21.9b0"
+black = "^21.11b1"
 ipython = "^7.28.0"
 icecream = "^2.1.1"
-
-[build-system]
-build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core>=1.0.0"]
+reorder-python-imports = "^2.6.0"
+prospector = "^1.5.3"
+flake8= "^3.8.4"
+tox = "^3.24.4"
+flake8-cognitive-complexity = "^0.1.0"
 
 [tool.black]
 line-length = 79
+
+# [tool.bandit]
+#  # Skip `B320` and `B410` because the suggestion is out-of-date (see
+#  # https://git.io/JM7Ow)
+# skips = ["B320", "B410"]
 
 [tool.poetry.scripts]
 obelist = "obelist.cli.cmds:main"
