--- a/.obelist/shellcheck.yaml
+++ b/.obelist/shellcheck.yaml
@@ -1,55 +1,41 @@
-# Copyright 2021, Naomi Rose and contributors
-#
-# Copying and distribution of this file, with or without modification, are
-# permitted in any medium without royalty, provided the copyright notice and
-# this notice are preserved. This file is offered as-is, without any warranty.
-
-# ShellCheck has four severity levels: Error, Warning, Info, and Style
-# https://github.com/koalaman/shellcheck/wiki/severity
-
-title: 'ShellCheck'
+name: ShellCheck
 formats:
-  gcc:
-    syntax: regex
-    severities:
-      notice:
-        match: '^(.*):(.*):(.*): note: (.*) \[(.*)\]$'
-      warning:
-        match: '^(.*):(.*):(.*): warning: (.*) \[(.*)\]$'
-      error:
-        match: '^(.*):(.*):(.*): error: (.*) \[(.*)\]$'
-    match-attrs:
-      file: '{0}'
-      line: '{1}'
-      title: 'ShellCheck: {4}'
-      message: '{3}'
-  checkstyle:
-    syntax: xpath
-    severities:
-      notice:
-        match: '//error[@severity="info"]'
-      warning:
-        match: '//error[@severity="warning"]'
-      error:
-        match: '//error[@severity="error"]'
-    match-attrs:
-      file: '../@name'
-      line: '@line'
-      title: '@source'
-      message: '@message'
+  # checkstyle:
+  #   syntax: xpath
+  #   rules:
+  #     - match: '//error[@severity="info"]'
+  #       severity: error
+  #     - match: '//error[@severity="warning"]'
+  #       severity: '//error[@severity="warning"]'
+  #     - match: '//error[@severity="error"]'
+  #       severity: error
+  #   set:
+  #     file: '../@name'
+  #     line: '@line'
+  #     code: '@source'
+  #     message: '@message'
+  #   rewrite:
+  #     code:
+  #       - match: '.*\.'
+  #         replace: ''
+
   json:
     syntax: jq
-    severities:
-      notice:
-        match:
+    rules:
+      - match:
           '.[] | select(type=="object" and .level=="style" or .level=="info")'
-      warning:
-        match: '.[] | select(type=="object" and .level=="warning")'
-      error:
-        match: '.[] | select(type=="object" and .level=="error")'
-    match-attrs:
-      file: '.file'
+        severity: notice
+      - match: '.[] | select(type=="object" and .level=="warning")'
+        severity: warning
+      - match: '.[] | select(type=="object" and .level=="error")'
+        severity: error
+    set:
+      filename: '.file'
       line: '.line'
       end-line: '.endLine'
-      title: '.code'
+      code: '.code'
       message: '.message'
+    rewrite:
+      code:
+        - match: '^(.*)$'
+          replace: 'SC\1'
