--- a/.editorconfig
+++ b/.editorconfig
@@ -10,14 +10,14 @@ max_line_length = 79
 trim_trailing_whitespace = true
 
 [*.py]
-indent_size = off
+indent_size = 4
 
 [*.sh]
 indent_size = 4
 
-[*.md]
-indent_size = off
-max_line_length = off
+[Makefile]
+indent_size = 4
+indent_style = tab
 
 [poetry.lock]
 max_line_length = off
