--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,6 +12,7 @@
     "streetsidesoftware.code-spell-checker",
     "tetradresearch.vscode-h2o",
     "timonwong.shellcheck",
-    "tamasfe.even-better-toml"
+    "tamasfe.even-better-toml",
+    "sourcery.sourcery"
   ]
 }
