Rename the project to Softener
I have renamed the project because I want the name to be
GitHub-agnostic. When choosing a name, I was reading about lint (in the
literal sense) and found the following sentence on Wikipedia:

> The accumulation of lint during clothes cleaning can be reduced with
> the use of a fabric softener, which reduces the amount of static
> electricity on clothing surfaces and therefore prevents the lint from
> sticking to the clothes.

I wasn't aware that this is how fabric softener works, but it serves as
a good metaphor.

Unfortunately, the words "soft" and "soften" are already taken as names
on PyPI. However, the "-er" suffix does make more sense as a noun
inflection (i.e., a tool that does something).

Also, the word is cute.

This commit changes the project name and makes a few other minor changes
to prepare it for rerelease as an alpha.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,34 +2,34 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "octonote",
+      "name": "softener",
       "type": "python",
       "request": "launch",
-      "program": "${workspaceRoot}/.venv/bin/octonote",
+      "program": "${workspaceRoot}/.venv/bin/softener",
       "console": "integratedTerminal"
     },
     {
-      "name": "octonote path",
+      "name": "softener path",
       "type": "python",
       "request": "launch",
-      "program": "${workspaceRoot}/.venv/bin/octonote",
+      "program": "${workspaceRoot}/.venv/bin/softener",
       "args": ["path"],
-      "cwd": "${workspaceRoot}/src/octonote",
+      "cwd": "${workspaceRoot}/src/softener",
       "console": "integratedTerminal"
     },
     {
-      "name": "octonote debug",
+      "name": "softener debug",
       "type": "python",
       "request": "launch",
-      "program": "${workspaceRoot}/.venv/bin/octonote",
+      "program": "${workspaceRoot}/.venv/bin/softener",
       "args": ["debug", "foo"],
       "console": "integratedTerminal"
     },
     {
-      "name": "octonote parse gcc",
+      "name": "softener parse gcc",
       "type": "python",
       "request": "launch",
-      "program": "${workspaceRoot}/.venv/bin/octonote",
+      "program": "${workspaceRoot}/.venv/bin/softener",
       "args": [
         "parse",
         "-q",
@@ -42,10 +42,10 @@
       "console": "integratedTerminal"
     },
     {
-      "name": "octonote parse checkstyle",
+      "name": "softener parse checkstyle",
       "type": "python",
       "request": "launch",
-      "program": "${workspaceRoot}/.venv/bin/octonote",
+      "program": "${workspaceRoot}/.venv/bin/softener",
       "args": [
         "parse",
         "-q",
@@ -58,10 +58,10 @@
       "console": "integratedTerminal"
     },
     {
-      "name": "octonote parse json",
+      "name": "softener parse json",
       "type": "python",
       "request": "launch",
-      "program": "${workspaceRoot}/.venv/bin/octonote",
+      "program": "${workspaceRoot}/.venv/bin/softener",
       "args": [
         "parse",
         "-q",
