Update devcontainer to use Docker Hub image

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,4 @@
 {
-  "image": "ghcr.io/bottle-garden/gh-vscode/devcontainer:universal",
+  "image": "nomiro/devcontainers:universal",
   "remoteUser": "vscode"
 }
