--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Push
+name: Build
 on:
   pull_request:
   push:
@@ -10,7 +10,7 @@ jobs:
     name: Run tests
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/bottle-garden/gh-vscode/devcontainer:universal
+      image: nomiro/devcontainers:universal
     steps:
       - uses: actions/checkout@v2
       - run: make lint
