--- a/src/obelist/data/schemas/config.json
+++ b/src/obelist/data/schemas/config.json
@@ -16,9 +16,7 @@
           "$ref": "#/definitions/PatternMatch"
         }
       },
-      "required": [
-        "name"
-      ],
+      "required": ["name"],
       "title": "Check"
     },
     "Group": {
@@ -29,9 +27,7 @@
           "type": "string"
         }
       },
-      "required": [
-        "by"
-      ],
+      "required": ["by"],
       "title": "Group"
     },
     "PatternMatch": {
@@ -48,11 +44,7 @@
           "$ref": "#/definitions/Errors"
         }
       },
-      "required": [
-        "errors",
-        "notes",
-        "warnings"
-      ],
+      "required": ["errors", "notes", "warnings"],
       "title": "PatternMatch"
     },
     "Errors": {
@@ -78,13 +70,7 @@
           "type": "string"
         }
       },
-      "required": [
-        "filename",
-        "line_num",
-        "msg",
-        "regex",
-        "title"
-      ],
+      "required": ["filename", "line_num", "msg", "regex", "title"],
       "title": "Errors"
     }
   }
