--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [tool.poetry]
 name = "obelist"
 version = "0.0.0-a0"
-description = "A CLI tool for generating GitHub workflow annotations"
+description = """\
+A CLI tool for parsing arbitrary input and generating standardized, \
+annotations for linting, tests, etc. (including support for GitHub Actions)\
+"""
 authors = ["norosa <23469+norosa@users.noreply.github.com>"]
 repository = "https://github.com/nomiro/obelist"
 readme = "README.md"
