--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ PyYAML = "^6.0"
 natsort = "^8.0.0"
 pyroma = "^3.2"
 vulture = "^2.3"
+urlextract = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.11b1"
