--- a/.obelist/prospector.yaml
+++ b/.obelist/prospector.yaml
@@ -3,10 +3,10 @@ formats:
   json:
     syntax: jq
     rules:
-      - match: '.messages[] | select(type=="object")'
+      - match: .messages[] | select(type=="object")
         severity: warning
     set:
-      filename: '.location .path'
-      line: '.location .line'
+      filename: .location .path
+      line: .location .line
       code: '.source + ": " + .code'
-      message: '.message'
+      message: .message
