--- a/.obelist/cspell.yaml
+++ b/.obelist/cspell.yaml
@@ -3,7 +3,7 @@ formats:
   txt:
     syntax: regex
     rules:
-      - match: '^([^:]+):(\d+):(\d+) - (.*)$'
+      - match: ^([^:]+):(\d+):(\d+) - (.*)$
         severity: warning
     set:
       filename: 0
