--- a/.obelist/markdownlint.yaml
+++ b/.obelist/markdownlint.yaml
@@ -3,11 +3,10 @@ formats:
   txt:
     syntax: regex
     rules:
-      - match: '^([^:]+):(\d+)(:(\d+))? ([^ ]+) (.*)$'
+      - match: ^([^:]+):(\d+)(:(\d+))? ([^ ]+) (.*)$
         severity: warning
-        reset: true
-        set:
-          filename: 0
-          line: 1
-          code: 4
-          message: 5
+    set:
+      filename: 0
+      line: 1
+      code: 4
+      message: 5
