--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,6 +1,6 @@
 bracketSameLine: true
 bracketSpacing: false
-proseWrap: 'always'
+proseWrap: always
 semi: true
 singleQuote: true
 trailingComma: all
