Prepare for 0.0.0-a2 release

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "obelist"
-version = "0.0.0-a1"
+version = "0.0.0-a2"
 description = """\
-A CLI tool for parsing arbitrary input and generating standardized \
-annotations for linting, tests, etc. (including support for GitHub Actions)\
+A CLI tool for generating standard annotations for linting tools, tests, and \
+so on (including support for GitHub Actions)\
 """
 authors = ["Naomi Rose <23469+nomiro@users.noreply.github.com>"]
 repository = "https://github.com/nomiro/obelist"
