--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,14 @@
-[flake8]
-exclude = .venv
-max-complexity = 10
-ignore = E203, E501, W503
-max-cognitive-complexity=3
+[tox]
+requires =
+  tox-pyenv
+  tox-external-wheels
+isolated_build = true
+envlist = py36, py37, py38, py39, py310
+tox_pyenv_fallback = false
+
+# We purposefully separate our testing from the Poetry machinery so that we are
+# testing the package as it would be installed on a fresh machine without the
+# risk of environment contamination.
+[testenv]
+external_wheels = {toxinidir}/dist/*.whl
+commands = obelist --version
