--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ build-backend = "poetry.core.masonry.api"
 requires = ["poetry-core>=1.0.0"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.6.2"
 pastel = "^0.2.1"
 click = "^8.0.3"
 sh = "^1.14.2"
@@ -44,14 +44,15 @@ inflection = "^0.5.1"
 wrapt = "^1.13.3"
 charset-normalizer = "^2.0.7"
 lxml = "^4.6.4"
-pyjq = "^2.5.2"
-PyYAML = "^6.0"
 natsort = "^8.0.0"
 urlextract = "^1.4.0"
+PyYAML = "^6.0"
+jq = "^1.2.1"
+
 
 [tool.poetry.dev-dependencies]
 black = "^21.11b1"
-ipython = "^7.28.0"
+ipython = "^7"
 icecream = "^2.1.1"
 reorder-python-imports = "^2.6.0"
 prospector = "^1.5.3"
@@ -60,6 +61,8 @@ vulture = "^2.3"
 flake8 = "^3.9.2"
 flake8-cognitive-complexity = "^0.1.0"
 pep8 = "^1.7.1"
+pytest = "^6.2.5"
+tox = "^3.24.4"
 
 [tool.black]
 line-length = 79
