--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,76 +6,35 @@ on:
       - main
 
 jobs:
-  pull-devcontainer:
-    name: Pull devcontainer
+  create-image:
     runs-on: ubuntu-latest
     steps:
-      - run: docker pull nomiro/devcontainers:universal
-      - run: docker ps -a
-      - run: docker images nomiro/devcontainers:universal
-      - run: docker ps -a
-      - run: |
-          docker run -it --detach --name devcontainer \
-            nomiro/devcontainers:universal /bin/sh
-      - run: docker ps -a
-      - run: docker exec devcontainer touch /tmp/bar
-      - run: docker ps -a
-      - run: docker exec devcontainer ls -l /tmp
-      - run: docker ps -a
-      - run: |
-          docker commit "$(docker ps --latest --quiet)" \
-            nomiro/devcontainers:universal
-      - run: |
-          docker export "$(docker ps --latest --quiet)" |
-            gzip >/tmp/devcontainer.tar.gz
-      - uses: actions/upload-artifact@v2
+      - uses: actions/checkout@v2
+      - uses: docker/metadata-action@v3
+        id: meta
         with:
-          name: devcontainer
-          path: /tmp/devcontainer.tar.gz
-
-  configure-matrix:
-    name: Configure matrix
-    needs: pull-devcontainer
+          images: ${{ github.repository }}/devcontainer
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+          github-token: ${{ github.token }}
+      - uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/build-push-action@v2
+        id: build
+        with:
+          context: .devcontainer
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+  delete-image:
+    needs: create-image
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: chipkent/action-cleanup-package@v1.0.1
         with:
-          name: devcontainer
-          path: /tmp
-      - run: ls -l /tmp
-      - name: docker image load
-        run: |
-          gunzip -c /tmp/devcontainer.tar.gz |
-            docker import - devcontainer:latest
-      - name: docker image
-        run: docker image ls
-      - run: |
-          docker run -it --detach --name devcontainer \
-            devcontainer:latest /bin/sh
-      - run: docker ps
-      - run: docker exec devcontainer ls -l /tmp
-      - run: docker ps -a
-      - run: docker exec devcontainer cat /tmp/bar
-  #     - uses: actions/checkout@v2
-  #     - name: Set lint targets
-  #       id: set-matrix
-  #       run: |
-  #         echo "::set-output name=matrix::$(make lint-targets | \
-  #           jq -Rc '[inputs]')"
-  #   outputs:
-  #     matrix: ${{ steps.set-matrix.outputs.matrix }}
-
-  # lint-matrix:
-  #   name: Lint matrix
-  #   needs: configure-matrix
-  #   runs-on: ubuntu-latest
-  #   container:
-  #     image: docker://nomiro/devcontainers:universal
-  #   strategy:
-  #     matrix:
-  #       targets: ${{ fromJSON(needs.configure-matrix.outputs.matrix) }}
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Make ${{ matrix.target }}
-  #       - run docker run nomiro/devcontainers:universal echo foo
-  #       # run: make lint-${{ matrix.target }}
+          package-name: ${{ github.repository }}/devcontainer
+          tag: pr-${{ github.event.pull_request.number }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
