--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,6 @@
 {
-  "image": "nomiro/devcontainers:universal",
-  "remoteUser": "vscode",
-  "extensions": [
-    "davidanson.vscode-markdownlint",
-    "editorconfig.editorconfig",
-    "esbenp.prettier-vscode",
-    "foxundermoon.shell-format",
-    "ms-python.python",
-    "streetsidesoftware.code-spell-checker",
-    "timonwong.shellcheck",
-    "yzhang.markdown-all-in-one"
-  ]
+  "build": {
+    "dockerfile": "Dockerfile"
+  },
+  "remoteUser": "vscode"
 }
