--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,14 +1,24 @@
 {
   "recommendations": [
     "codezombiech.gitignore",
+    "dansnow.vscode-dockerfilelint",
+    "davidanson.vscode-markdownlint",
+    "editorconfig.editorconfig",
     "eg2.vscode-npm-script",
     "emeraldwalk.runonsave",
+    "esbenp.prettier-vscode",
+    "foxundermoon.shell-format",
     "magicstack.magicpython",
+    "ms-azuretools.vscode-docker",
+    "ms-python.python",
     "ms-vscode.makefile-tools",
     "sandcastle.whitespace",
     "sourcery.sourcery",
+    "streetsidesoftware.code-spell-checker",
     "tamasfe.even-better-toml",
     "tetradresearch.vscode-h2o",
-    "xshrim.txt-syntax"
+    "timonwong.shellcheck",
+    "xshrim.txt-syntax",
+    "yzhang.markdown-all-in-one"
   ]
 }
