--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,6 +37,6 @@ jobs:
       - uses: bots-house/ghcr-delete-image-action@v1.0.0
         with:
           owner: ${{ github.actor }}
-          name: ${{ github.repository }}/devcontainer
+          name: lintkit/devcontainer
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: pr-${{github.event.pull_request.number}}
