--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,6 @@ jobs:
     steps:
       - uses: chipkent/action-cleanup-package@v1.0.1
         with:
-          package-name:
-            ghcr.io/${{ github.event.repository.name }}/devcontainer
+          package-name: ghcr.io/${{ github.repository }}/devcontainer
           tag: pr-${{ github.event.pull_request.number }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
